; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_set_message.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_set_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32, i32 }

@generic_message_timer = common dso_local global i32 0, align 4
@generic_message = common dso_local global i32 0, align 4
@GENERIC_MESSAGE_SIZE = common dso_local global i32 0, align 4
@DEFAULT_BACKDROP = common dso_local global i32 0, align 4
@generic_message_alpha = common dso_local global i32 0, align 4
@menu_widgets_generic_message_fadeout = common dso_local global i32 0, align 4
@GENERIC_MESSAGE_DURATION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @menu_widgets_set_message(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__, align 8
  store i8* %0, i8** %2, align 8
  store i64 ptrtoint (i32* @generic_message_timer to i64), i64* %3, align 8
  %5 = load i32, i32* @generic_message, align 4
  %6 = load i8*, i8** %2, align 8
  %7 = load i32, i32* @GENERIC_MESSAGE_SIZE, align 4
  %8 = call i32 @strlcpy(i32 %5, i8* %6, i32 %7)
  %9 = load i32, i32* @DEFAULT_BACKDROP, align 4
  store i32 %9, i32* @generic_message_alpha, align 4
  %10 = call i32 @menu_timer_kill(i32* @generic_message_timer)
  %11 = call i32 @menu_animation_kill_by_tag(i64* %3)
  %12 = load i32, i32* @menu_widgets_generic_message_fadeout, align 4
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @GENERIC_MESSAGE_DURATION, align 4
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  store i32 %14, i32* %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32* null, i32** %16, align 8
  %17 = call i32 @menu_timer_start(i32* @generic_message_timer, %struct.TYPE_3__* %4)
  ret void
}

declare dso_local i32 @strlcpy(i32, i8*, i32) #1

declare dso_local i32 @menu_timer_kill(i32*) #1

declare dso_local i32 @menu_animation_kill_by_tag(i64*) #1

declare dso_local i32 @menu_timer_start(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
